--- a/dtyp.ipynb
+++ b/dtyp.ipynb
@@ -73,18 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['swift', 'python', 'java', 'c', 'matlab']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "swift\n",
+      "python\n",
+      "java\n",
+      "matlab\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -97,7 +98,126 @@
     "#list appending\n",
     "addlang=['c','matlab']\n",
     "languages.extend(addlang)\n",
-    "languages"
+    "languages\n",
+    "#delete an item on a list\n",
+    "del languages[3]\n",
+    "languages\n",
+    "#looping n lists\n",
+    "for language in languages:\n",
+    "    print(language)\n",
+    "\n",
+    "#checkif an item exists in a list\n",
+    "print('java' in languages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list comprehension\n",
+    "numbers = [number*number for number in range(1,8)]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#What is the output of the following code snippet:\n",
+    "\n",
+    "if 'bar' in {'foo': 1, 'bar': 2, 'baz': 3}:\n",
+    "    print(1)\n",
+    "    print(2)\n",
+    "    if 'a' in 'qux':\n",
+    "        print(3)\n",
+    "print(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'1232' .isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['10', '15', '30', '60', '50', '70']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = ['10','20','30']\n",
+    "my_list =[]\n",
+    "elements = range(10,40,10)\n",
+    "list(elements)\n",
+    "my_list.append(list(elements))\n",
+    "my_list\n",
+    "#my_list[2] = '15'\n",
+    "#my_list\n",
+    "ext = ['60','50','70']\n",
+    "mylist[1] = '15'\n",
+    "mylist.extend(ext)\n",
+    "print(mylist)\n",
+    "mylist.pop()\n",
+    "mylist.sort()\n",
+    "mylist\n",
+    "mylist.index('30')"
    ]
   }
  ],
